# FlotyliaSite

./: .gitignore  Architecture.canvas  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2025_12_05_1019-1a062a6223bb_database_init.py  2025_12_05_1030-3c761e4dfbfa_add_admin.py  2025_12_05_1037-c4f9b02db5ad_add_transport_model.py  2025_12_05_1043-dfa19f0c75af_add_contract.py  2025_12_05_1046-bbd1cdb955a8_added_passport_url_in_user_model.py  2025_12_07_1001-4e21b1a4b29d_add_timezone_is_true_in_contract_model.py  2025_12_07_1005-4eb88c119a8f_add_defaul_func_now_in_contract_model.py  2025_12_20_1549-5fe308b09770_add_file_model.py  2025_12_23_1152-0265e20d6159_add_invoice_field_in_user_model.py  2025_12_23_1212-d4f9079b7287_add_status_in_user_model.py  2025_12_23_1237-d8ba1dd6b82c_added_unique_param_in_username_field_in_.py  2025_12_23_1324-3d51238d437d_deleted_passport_url_and_add_passport_.py  2025_12_23_1351-a47491a8214e_deleted_contract_url_and_add_contract_.py  2025_12_29_1053-c079f7f49910_create_new_model_and_add_new_fields_in_.py  2025_12_29_1055-bec8c14c497b_fix_contract_model.py  2025_12_29_1215-43882d03149f_added_visa_field_in_user_model.py  2026_01_19_1632-4d7c3e2269b6_create_db.py  2026_02_07_0807-437252d3fc81_delete_file_field_in_user_model.py  (+11 more)
backend/app/api/: __init__.py
backend/app/core/: cache.py  database.py
backend/app/core/auth/: utils.py
backend/app/services/: __init__.py  crud.py  error_handlers.py  export.py  s3_client.py
(+110 files in other folders)
